# savs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  api.yaml  create_asan_build.sh  format.sh  gen_sertificats.sh  main.cpp  run.sh  server.key  server.pem
cmake/: find_glog.cmake  find_yaml-cpp.cmake  flags.cmake  savs.cmake
keys/: server.key  server.pem
logs/: log.kek  savs.INFO
src/server/: epoll_wrapper.cpp  epoll_wrapper.hpp  http.cpp  http.hpp  https_server.cpp  https_server.hpp
src/socket/: socket.cpp  socket.hpp
src/ssl/: ssl.cpp  ssl.hpp
src/utils/: log.hpp
templates/: 404.html  index.html  main.html
wasm/1/: counter.cpp  run.sh
wasm/2/: lepr.js  main.c  main.html  out.wasm  script.js  square.c  square.cpp  square.js  square.wasm
wasm/3/: help.md  main.cpp  main.html  main.js  main.wasm  run.sh  script.js
